--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-10.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-10.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Google Flexes Its Tech Muscles With Quantum Computing Chip, Waymo	谷歌通过量子计算芯片 Waymo 展示其技术实力
+  Google Flexes Its Tech Muscles With Quantum Computing Chip, Waymo
 image: /assets/img/stock-of-the-day/2024-12-10.jpg
 date: 2024-12-10 17:26 -0800
 author: REINHARDT KRAUSE
@@ -12,134 +12,106 @@ author: REINHARDT KRAUSE
 
 
 
-Google-parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) is the [IBD Stock of the Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the company flexes its technology prowess with a new quantum computing chip. Google stock has been pressured by rising internet search competition. Heading into 2025, however, Waymo and YouTube could have upside.  
-谷歌母公司 **Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 是[当今的 IBD 股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)，因为该公司通过新的量子计算芯片展示了其技术实力。谷歌股票一直受到日益激烈的互联网搜索竞争的压力。然而，进入 2025 年，Waymo 和 YouTube 可能会有上升空间。
+Google-parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) is the [IBD Stock of the Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the company flexes its technology prowess with a new quantum computing chip. Google stock has been pressured by rising internet search competition. Heading into 2025, however, Waymo and YouTube could have upside.
 
 
-On the [stock market today](https://www.investors.com/stock-market-today/?), Google stock climbed 5.6% to close at 185.17. Google has gained 31% in 2024. Still, most of the [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks-december-2024/) have done a lot better than Alphabet.  
-[在今天的股市](https://www.investors.com/stock-market-today/?)上，谷歌股票上涨 5.6%，收于 185.17。谷歌在 31 年上涨了 2024%。尽管如此，[Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks-december-2024/) 中的大多数都比 Alphabet 做得好得多。
+On the [stock market today](https://www.investors.com/stock-market-today/?), Google stock climbed 5.6% to close at 185.17. Google has gained 31% in 2024. Still, most of the [Magnificent Seven](https://www.investors.com/research/magnificent-seven-stocks-december-2024/) have done a lot better than Alphabet.
 
 
-IBD on Tuesday added Google stock to [SwingTrader](https://swingtrader.investors.com/?) and Leaderboard.  
-IBD 周二将谷歌股票添加到 [SwingTrader](https://swingtrader.investors.com/?) 和 Leaderboard。
+IBD on Tuesday added Google stock to [SwingTrader](https://swingtrader.investors.com/?) and Leaderboard.
 
 
-Google stock forged a cup-and-handle base with an entry point of 182.49.  
-谷歌股票锻造了一个杯柄基础，入场点为 182.49。
+Google stock forged a cup-and-handle base with an entry point of 182.49.
 
 
 
 
-'Willow' Quantum Chip Could Lift Google Stock“Willow”量子芯片可能会提振谷歌股票
-------------------------------------------------------------------
+'Willow' Quantum Chip Could Lift Google Stock
+---------------------------------------------
 
 
-On Tuesday, Google stock pushed into a buy zone amid the announcement of the Willow [quantum computing](https://blog.google/technology/research/google-willow-quantum-chip/) chip. Google has been a [leader in quantum research](https://www.investors.com/news/technology/quantum-computing-after-artificial-intelligence-it-could-be-the-next-big-thing/). But quantum technology has faced challenges.  
-周二，谷歌股票在 Willow [量子计算](https://blog.google/technology/research/google-willow-quantum-chip/)芯片发布后推至买入区域。Google 一直是[量子研究的领导者](https://www.investors.com/news/technology/quantum-computing-after-artificial-intelligence-it-could-be-the-next-big-thing/)。但量子技术面临着挑战。
+On Tuesday, Google stock pushed into a buy zone amid the announcement of the Willow [quantum computing](https://blog.google/technology/research/google-willow-quantum-chip/) chip. Google has been a [leader in quantum research](https://www.investors.com/news/technology/quantum-computing-after-artificial-intelligence-it-could-be-the-next-big-thing/). But quantum technology has faced challenges.
 
 
-Advances in quantum computing are expected to surpass today's electronic-chip-based supercomputers. Quantum computing works on a subatomic level and uses exotic technologies, like supercold superconductor chips. Quantum computing's ultimate benefit is that it solves problems too complex for today's classical computers.  
-量子计算的进步有望超过当今基于电子芯片的超级计算机。量子计算在亚原子水平上工作，并使用超冷超导体芯片等奇特的技术。量子计算的最终好处是，它解决了对于当今经典计算机来说过于复杂的问题。
+Advances in quantum computing are expected to surpass today's electronic-chip-based supercomputers. Quantum computing works on a subatomic level and uses exotic technologies, like supercold superconductor chips. Quantum computing's ultimate benefit is that it solves problems too complex for today's classical computers.
 
 
-Google stock hit an all-time high of 191.75 on July 10. Shares have ping-ponged since July after they hit an all-time high.  
-谷歌股票在 7 月 10 日创下 191.75 的历史新高。自7月以来，股价在创下历史新高后一直表现不佳。
+Google stock hit an all-time high of 191.75 on July 10. Shares have ping-ponged since July after they hit an all-time high.
 
 
-The impact of generative artificial intelligence on the internet search advertising business of Alphabet remains a key issue for investors. Also, antitrust lawsuits filed by the Department of Justice have pressured Google stock.  
-生成式人工智能对 Alphabet 互联网搜索广告业务的影响仍然是投资者的关键问题。此外，美国司法部提起的反垄断诉讼也给谷歌股票带来了压力。
+The impact of generative artificial intelligence on the internet search advertising business of Alphabet remains a key issue for investors. Also, antitrust lawsuits filed by the Department of Justice have pressured Google stock.
 
 
-Waymo Expansion Waymo 扩展
-------------------------
+Waymo Expansion
+---------------
 
 
-On the other hand, Google continues to create advanced technologies. Waymo is widely viewed as the [leader in autonomous vehicles](https://www.wsj.com/tech/waymo-san-francisco-self-driving-robotaxis-uber-244feecf?).  
-另一方面，谷歌继续创造先进的技术。Waymo 被广泛认为是[自动驾驶汽车的领导者](https://www.wsj.com/tech/waymo-san-francisco-self-driving-robotaxis-uber-244feecf?)。
+On the other hand, Google continues to create advanced technologies. Waymo is widely viewed as the [leader in autonomous vehicles](https://www.wsj.com/tech/waymo-san-francisco-self-driving-robotaxis-uber-244feecf?).
 
 
-Meanwhile, Waymo on Dec. 5 announced that the company plans to expand its autonomous-vehicle rideshare service to Miami in 2026. The Waymo One robotaxi service currently operates in Phoenix, San Francisco and Los Angeles, with upcoming service already planned for Austin, Texas, and Atlanta. In Miami, Waymo will compete with **Uber Technologies** ([UBER](https://research.investors.com/quote.aspx?symbol=UBER)) and other rideshare services. In Austin and Atlanta, Waymo is partnering with Uber.  
-与此同时，Waymo 于 12 月 5 日宣布，该公司计划在 2026 年将其自动驾驶汽车拼车服务扩展到迈阿密。Waymo One 自动驾驶出租车服务目前在凤凰城、旧金山和洛杉矶运营，即将在德克萨斯州奥斯汀和亚特兰大提供服务。在迈阿密，Waymo 将与 **Uber Technologies** （[UBER](https://research.investors.com/quote.aspx?symbol=UBER)） 和其他拼车服务竞争。在奥斯汀和亚特兰大，Waymo 正在与 Uber 合作。
+Meanwhile, Waymo on Dec. 5 announced that the company plans to expand its autonomous-vehicle rideshare service to Miami in 2026. The Waymo One robotaxi service currently operates in Phoenix, San Francisco and Los Angeles, with upcoming service already planned for Austin, Texas, and Atlanta. In Miami, Waymo will compete with **Uber Technologies** ([UBER](https://research.investors.com/quote.aspx?symbol=UBER)) and other rideshare services. In Austin and Atlanta, Waymo is partnering with Uber.
 
 
-Meanwhile, Waymo also disclosed that it has reached 150,000 trips per week, representing rapid growth from August's 100,00 per week. In October, Waymo closed a $5.6 billion funding round, including from Google and previous investors. If Wall Street analysts start including Waymo in Alphabet's valuation, it would be a big development.  
-与此同时，Waymo 还透露，它已达到每周 150,000 次出行，比 8 月份的每周 100,00 次快速增长。去年 10 月，Waymo 完成了 56 亿美元的融资，包括来自谷歌和之前投资者的融资。如果华尔街分析师开始将 Waymo 纳入 Alphabet 的估值，那将是一个很大的进展。
+Meanwhile, Waymo also disclosed that it has reached 150,000 trips per week, representing rapid growth from August's 100,00 per week. In October, Waymo closed a $5.6 billion funding round, including from Google and previous investors. If Wall Street analysts start including Waymo in Alphabet's valuation, it would be a big development.
 
 
-One wild card heading into 2025 is the status of YouTube rival TikTok. An appeals court upheld a federal law requiring TikTok to shed its Chinese ownership or be banned in the U.S. The decision relied on warnings from U.S. officials that the Chinese government can require ByteDance, the app's Beijing-based parent company, to provide access to U.S. users' data.  
-进入 2025 年的一张万能牌是 YouTube 竞争对手 TikTok 的地位。一家上诉法院维持了一项联邦法律，要求 TikTok 放弃其在中国的所有权或在美国被禁止。该决定基于美国官员的警告，即中国政府可以要求该应用位于北京的母公司字节跳动提供对美国用户数据的访问权限。
+One wild card heading into 2025 is the status of YouTube rival TikTok. An appeals court upheld a federal law requiring TikTok to shed its Chinese ownership or be banned in the U.S. The decision relied on warnings from U.S. officials that the Chinese government can require ByteDance, the app's Beijing-based parent company, to provide access to U.S. users' data.
 
 
-If TikTok is banned next year in the U.S., there's limited upside for Google and YouTube, said a Deutsche Bank report.  
-德意志银行的一份报告称，如果 TikTok 明年在美国被禁止，谷歌和 YouTube 的上行空间有限。
+If TikTok is banned next year in the U.S., there's limited upside for Google and YouTube, said a Deutsche Bank report.
 
 
-"YouTube would generate an additional $921 million in revenue for every 10% of TikTok's minutes that are reallocated towards YouTube's daily active users," said Deutsche Bank analyst Benjamin Black in a report.  
-“TikTok 每 10% 的分钟数重新分配给 YouTube 的每日活跃用户，YouTube 将产生额外的 9.21 亿美元收入，”德意志银行分析师本杰明·布莱克 （Benjamin Black） 在一份报告中表示。
+"YouTube would generate an additional $921 million in revenue for every 10% of TikTok's minutes that are reallocated towards YouTube's daily active users," said Deutsche Bank analyst Benjamin Black in a report.
 
 
-In 2025, developments in the artificial intelligence landscape will be key for investors. Generative AI startup OpenAI's ChatGPT continues to gain market share. ChatGPT delivers answers to search queries, while Google's business model has been based on providing web links. Startup Perplexity is another new rival.  
-到 2025 年，人工智能领域的发展将成为投资者的关键。生成式 AI 初创公司 OpenAI 的 ChatGPT 继续获得市场份额。ChatGPT 为搜索查询提供答案，而 Google 的商业模式一直基于提供网络链接。Startup Perfasciity 是另一个新的竞争对手。
+In 2025, developments in the artificial intelligence landscape will be key for investors. Generative AI startup OpenAI's ChatGPT continues to gain market share. ChatGPT delivers answers to search queries, while Google's business model has been based on providing web links. Startup Perplexity is another new rival.
 
 
-AI Overviews Ramps Up For Google Stock谷歌股票的 AI 概述增加
----------------------------------------------------
+AI Overviews Ramps Up For Google Stock
+--------------------------------------
 
 
-Google began deploying AI Overviews in the U.S. in mid-May, with conversational summaries topping links for many search queries. In late October, Google launched AI Overviews in 100 countries  
-Google 于 5 月中旬开始在美国部署 AI Overviews，对话摘要在许多搜索查询的链接中名列前茅。10 月下旬，Google 在 100 个国家/地区推出了 AI 概览
+Google began deploying AI Overviews in the U.S. in mid-May, with conversational summaries topping links for many search queries. In late October, Google launched AI Overviews in 100 countries
 
 
-The AI Overviews system uses Google's in-house Gemini AI model. Advertisers utilizing Gemini AI tools see increased traffic and click-through rates, especially among younger demographics, Google says.  
-AI Overviews 系统使用 Google 内部的 Gemini AI 模型。谷歌表示，使用 Gemini AI 工具的广告商看到了流量和点击率的增加，尤其是在年轻人群中。
+The AI Overviews system uses Google's in-house Gemini AI model. Advertisers utilizing Gemini AI tools see increased traffic and click-through rates, especially among younger demographics, Google says.
 
 
-"We expect an eventful year for search in 2025, with new competition, a remedy ruling in DOJ case, and Google capitalizing on new AI overview format (better results, more ads)," said Bank of America analyst Justin Post in a report. "For the last three months, Google's U.S. search share has increased, and the global rollout suggests Google is seeing a positive impact on search. We remain constructive on the AI opportunity for Google given potential benefits to search usage/monetization, YouTube content/targeting and cloud computing demand."  
-“我们预计 2025 年将是搜索多事之秋，届时将出现新的竞争、美国司法部案件的补救裁决，以及谷歌利用新的 AI 概览格式（更好的结果、更多的广告），”美国银行分析师贾斯汀·波斯特 （Justin Post） 在一份报告中说。“在过去的三个月里，谷歌在美国的搜索份额有所增加，全球推广表明谷歌正在看到对搜索的积极影响。鉴于搜索使用/货币化、YouTube 内容/定位和云计算需求的潜在好处，我们对 Google 的 AI 机会仍然持建设性态度。
+"We expect an eventful year for search in 2025, with new competition, a remedy ruling in DOJ case, and Google capitalizing on new AI overview format (better results, more ads)," said Bank of America analyst Justin Post in a report. "For the last three months, Google's U.S. search share has increased, and the global rollout suggests Google is seeing a positive impact on search. We remain constructive on the AI opportunity for Google given potential benefits to search usage/monetization, YouTube content/targeting and cloud computing demand."
 
 
 
-The company's Relative Strength Rating currently stands at 75 out of a best-possible 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nasdaq-alphabet-cl-a-googl.aspx). The best stocks tend to have an RS Rating of 80 or better.  
-根据 [IBD Stock Checkup](https://research.investors.com/stock-checkup/nasdaq-alphabet-cl-a-googl.aspx) 的数据，该公司的相对实力评级目前为 75 分（满分 99 分）。最好的股票往往具有 80 或更高的 RS 评级。
+The company's Relative Strength Rating currently stands at 75 out of a best-possible 99, according to [IBD Stock Checkup](https://research.investors.com/stock-checkup/nasdaq-alphabet-cl-a-googl.aspx). The best stocks tend to have an RS Rating of 80 or better.
 
 
-Google stock holds an [Accumulation/Distribution Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-accumulation-distribution-rating-shows-professionals-moves/) of D+. That institutional ownership rating analyzes price and volume changes in a stock over the past 13 weeks of trading. A+ signifies heavy institutional buying; E means heavy selling. Think of a C grade as neutral.  
-Google 股票的[累积/派发评级](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-accumulation-distribution-rating-shows-professionals-moves/)为 D+。该机构所有权评级分析了过去 13 周交易期间股票的价格和成交量变化。A+ 表示机构大量购买;E 表示重卖。将 C 级视为中性。
+Google stock holds an [Accumulation/Distribution Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-accumulation-distribution-rating-shows-professionals-moves/) of D+. That institutional ownership rating analyzes price and volume changes in a stock over the past 13 weeks of trading. A+ signifies heavy institutional buying; E means heavy selling. Think of a C grade as neutral.
 
 
-Further, shares hold an IBD Composite Rating of 93 out of 99. The best growth stocks have a Composite Rating of 90 or better.  
-此外，股票的 IBD 综合评级为 93 分（满分 99 分）。最好的成长型股票的综合评级为 90 或更高。
+Further, shares hold an IBD Composite Rating of 93 out of 99. The best growth stocks have a Composite Rating of 90 or better.
 
 
-*Follow Reinhardt Krause on Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech)**for updates on artificial intelligence, cybersecurity and cloud computing.*  
-*在 Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech) 上关注 Reinhardt Krause**，了解有关人工智能、网络安全和云计算的最新信息。*
+*Follow Reinhardt Krause on Twitter [@reinhardtk\_tech](https://twitter.com/reinhardtk_tech)**for updates on artificial intelligence, cybersecurity and cloud computing.*
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Want To Trade Options? Here Are The Basics To Get You Started  
-想要交易期权？以下是帮助您入门的基础知识](https://www.investors.com/ibd-videos/videos/want-to-trade-options-here-are-the-basics-to-get-you-started)
+[Want To Trade Options? Here Are The Basics To Get You Started](https://www.investors.com/ibd-videos/videos/want-to-trade-options-here-are-the-basics-to-get-you-started)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
-IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Monitor IBD's "Breaking Out Today" List For Companies Hitting New Buy Points  
-监控 IBD 的“今日突破”名单，寻找达到新买入点的公司](https://www.investors.com/ibd-indexes/ibd-breakout-stocks-index/)
+[Monitor IBD's "Breaking Out Today" List For Companies Hitting New Buy Points](https://www.investors.com/ibd-indexes/ibd-breakout-stocks-index/)
 
 
-[IBD Live: A New Tool For Daily Stock Market Analysis  
-IBD Live：每日股市分析的新工具](https://www.investors.com/research/stock-market-analysis-start-day-ibd-live/)
+[IBD Live: A New Tool For Daily Stock Market Analysis](https://www.investors.com/research/stock-market-analysis-start-day-ibd-live/)
 
 
-[Futures: Two Titans Jump But Growth Skids Again  
-期货：两只巨人跳跃，但增长再次下滑](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-google-tesla-strong-palantir-nvidia-fall-cpi-inflation-due/)
+[Futures: Two Titans Jump But Growth Skids Again](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-google-tesla-strong-palantir-nvidia-fall-cpi-inflation-due/)
 
 
 
