--- a/_columns/The_Big_Picture/zh-cn/2024-12-10.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-10.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Reverses Lower Ahead Of CPI Data; Top-Rated Growth Stocks Pressured Again	股市在 CPI 数据公布前反转走低;顶级成长股再度承压
+  Stock Market Reverses Lower Ahead Of CPI Data; Top-Rated Growth Stocks Pressured Again
 date: 2024-12-10 17:35 -0800
 author: KEN SHREVE
 ---
@@ -10,69 +10,56 @@ author: KEN SHREVE
 
 
 
-The major indexes gave back early gains in the stock market Tuesday as growth stocks succumbed to more selling. After slumping 4.2% in higher volume Monday, the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell another 2% and closed below its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).  
-周二，主要股指回吐了股市早盘的涨幅，因为成长股屈服于更多的抛售。在周一大宗交易中下跌 4.2% 后，Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 又下跌了 2%，收于其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)下方。
+The major indexes gave back early gains in the stock market Tuesday as growth stocks succumbed to more selling. After slumping 4.2% in higher volume Monday, the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell another 2% and closed below its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).
 
 
-The Russell 2000 small-cap index slipped 0.4% but held support at its 21-day line, while the Dow Jones Industrial Average and S&P 500 closed with slightly milder losses.  
-罗素 2000 小盘股指数下跌 0.4%，但守住了 21 日线的支撑位，而道琼斯工业平均指数和标准普尔 500 指数收盘跌幅略小。
+The Russell 2000 small-cap index slipped 0.4% but held support at its 21-day line, while the Dow Jones Industrial Average and S&P 500 closed with slightly milder losses.
 
 
 
 
-Tuesday's session served up a few chart breakouts. **Badger Meter** ([BMI](https://research.investors.com/quote.aspx?symbol=BMI)) cleared a [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) with a 229.32 buy point. The company is a provider of flow measurement and water quality monitoring services. Volume was about double the stock's average.  
-周二的交易时段出现了一些图表突破。**Badger Meter** （[BMI](https://research.investors.com/quote.aspx?symbol=BMI)） 以 229.32 的买入点清除了一个[带手柄的杯子底部](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)。该公司是流量测量和水质监测服务提供商。成交量大约是该股平均水平的两倍。
+Tuesday's session served up a few chart breakouts. **Badger Meter** ([BMI](https://research.investors.com/quote.aspx?symbol=BMI)) cleared a [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) with a 229.32 buy point. The company is a provider of flow measurement and water quality monitoring services. Volume was about double the stock's average.
 
 
-Meanwhile, news of a new [quantum computing chip](https://www.investors.com/research/ibd-stock-of-the-day/google-stock-googl-quantum-computing-waymo-youtube-2025/) from Google parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) fueled a cup-with-handle breakout. Alphabet jumped more than 5% in strong volume and cleared a 182.49 entry.  
-与此同时，谷歌母公司 **Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 推出新型[量子计算芯片](https://www.investors.com/research/ibd-stock-of-the-day/google-stock-googl-quantum-computing-waymo-youtube-2025/)的消息推动了带手柄杯子的突破。Alphabet 强劲成交量上涨超过 5%，并清除了 182.49 的条目。
+Meanwhile, news of a new [quantum computing chip](https://www.investors.com/research/ibd-stock-of-the-day/google-stock-googl-quantum-computing-waymo-youtube-2025/) from Google parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) fueled a cup-with-handle breakout. Alphabet jumped more than 5% in strong volume and cleared a 182.49 entry.
 
 
-In the retail sector, **Ollie's Bargain Outlet** ([OLLI](https://research.investors.com/quote.aspx?symbol=OLLI)) jumped 13% and cleared a 22-week consolidation despite a mixed [earnings report](https://www.investors.com/news/ollies-bargain-outlet-olli-united-natural-foods-unfi-earnings-buy-point/).  
-在零售板块，尽管[财报](https://www.investors.com/news/ollies-bargain-outlet-olli-united-natural-foods-unfi-earnings-buy-point/)喜忧参半，但 **Ollie's Bargain Outlet** （[OLLI）](https://research.investors.com/quote.aspx?symbol=OLLI) 上涨 13%，并结束了为期 22 周的盘整。
+In the retail sector, **Ollie's Bargain Outlet** ([OLLI](https://research.investors.com/quote.aspx?symbol=OLLI)) jumped 13% and cleared a 22-week consolidation despite a mixed [earnings report](https://www.investors.com/news/ollies-bargain-outlet-olli-united-natural-foods-unfi-earnings-buy-point/).
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-The Nasdaq composite's early gain of nearly 0.8% turned into a loss of 0.3% by the close. The Dow Jones Industrial Average and S&P 500 also lost about 0.3%.  
-纳斯达克综合指数早盘上涨近 0.8%，收盘时下跌 0.3%。道琼斯工业平均指数和标准普尔 500 指数也下跌了约 0.3%。
+The Nasdaq composite's early gain of nearly 0.8% turned into a loss of 0.3% by the close. The Dow Jones Industrial Average and S&P 500 also lost about 0.3%.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/12/MP121024.jpg)
 
 
-The S&P 500 held up relatively well despite an [earnings sell-off](https://www.investors.com/news/technology/oracle-stock-meta-ai-cloud-earnings-dec-2024/) for **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)), which gapped below its 50-day moving average.  
-尽管**甲骨文** （[ORCL）](https://research.investors.com/quote.aspx?symbol=ORCL) 的[收益遭到抛售](https://www.investors.com/news/technology/oracle-stock-meta-ai-cloud-earnings-dec-2024/)，但标准普尔 500 指数表现相对较好，该股跳空跌破其 50 天移动平均线。
+The S&P 500 held up relatively well despite an [earnings sell-off](https://www.investors.com/news/technology/oracle-stock-meta-ai-cloud-earnings-dec-2024/) for **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)), which gapped below its 50-day moving average.
 
 
-Declining stocks outnumbered advancers by less than 2-to-1. Volume fell on both main exchanges after the Nasdaq composite and S&P 500 marked rare distribution days Monday, falling 0.6% in higher volume.  
-下跌的股票数量与上涨的股票数量之比不到 2 比 1。在纳斯达克综合指数和标准普尔 500 指数周一出现罕见的派息日后，两家主要交易所的成交量均下跌，成交量增加，下跌 0.6%。
+Declining stocks outnumbered advancers by less than 2-to-1. Volume fell on both main exchanges after the Nasdaq composite and S&P 500 marked rare distribution days Monday, falling 0.6% in higher volume.
 
 
-The 10-year Treasury yield picked up three basis points to 4.23% ahead of next week's two-day Federal Reserve meeting. The Federal Open Market Committee is widely expected to lower its key lending rate by another 25 basis points to a range of 4.25% to 4.50%.  
-在下周为期两天的美联储会议之前，10 年期美国国债收益率上涨 3 个基点至 4.23%。市场普遍预计联邦公开市场委员会将再下调关键贷款利率 25 个基点至 4.25% 至 4.50% 的区间。
+The 10-year Treasury yield picked up three basis points to 4.23% ahead of next week's two-day Federal Reserve meeting. The Federal Open Market Committee is widely expected to lower its key lending rate by another 25 basis points to a range of 4.25% to 4.50%.
 
 
-But the latest reading on consumer prices, due Wednesday at 8:30 a.m. ET, could sway that decision. On a year-over-year basis, core prices are expected to be up 3.3% in November, unchanged from October. But headline prices, year over year, are expected to tick higher to 2.7% from 2.6%.  
-但将于美国东部时间周三上午 8：30 公布的最新消费者价格数据可能会影响这一决定。与去年同期相比，预计 11 月核心价格将上涨 3.3%，与 10 月持平。但预计整体价格同比将从 2.6% 上涨至 2.7%。
+But the latest reading on consumer prices, due Wednesday at 8:30 a.m. ET, could sway that decision. On a year-over-year basis, core prices are expected to be up 3.3% in November, unchanged from October. But headline prices, year over year, are expected to tick higher to 2.7% from 2.6%.
 
 
-The Fed's preferred inflation gauge — the core personal consumption expenditures index — on Nov. 27 [came in at 2.8%](https://www.investors.com/news/economy/pce-inflation-oct-federal-reserve-sp-500/), just above the 2.7% consensus. Sticky inflation is a concern for the stock market, although the jobs market and overall consumer spending continue to hold up relatively well.  
-11 月 27 日，美联储首选的通胀指标——核心个人消费支出指数——[为 2.8%，](https://www.investors.com/news/economy/pce-inflation-oct-federal-reserve-sp-500/)略高于市场预期的 2.7%。粘性通胀是股市的一个担忧，尽管就业市场和整体消费者支出继续保持相对较好。
+The Fed's preferred inflation gauge — the core personal consumption expenditures index — on Nov. 27 [came in at 2.8%](https://www.investors.com/news/economy/pce-inflation-oct-federal-reserve-sp-500/), just above the 2.7% consensus. Sticky inflation is a concern for the stock market, although the jobs market and overall consumer spending continue to hold up relatively well.
 
 
-Airlines Strong, Chips Weak航空公司强，芯片弱
-------------------------------------
+Airlines Strong, Chips Weak
+---------------------------
 
 
-Airline stocks were among the day's best performers. Sentiment was positive in the group after **Alaska Air** ([ALK](https://research.investors.com/quote.aspx?symbol=ALK)) issued strong earnings guidance for 2025 and also announced a $1 billion share repurchase program. Alaska Air completed its acquisition of Hawaiian Holdings in September.  
-航空公司股票是当天表现最好的股票之一。在**阿拉斯加航空** （[ALK](https://research.investors.com/quote.aspx?symbol=ALK)） 发布了强劲的 2025 年盈利指引并宣布了一项 10 亿美元的股票回购计划后，该集团的情绪是积极的。阿拉斯加航空于 9 月完成了对 Hawaiian Holdings 的收购。
+Airline stocks were among the day's best performers. Sentiment was positive in the group after **Alaska Air** ([ALK](https://research.investors.com/quote.aspx?symbol=ALK)) issued strong earnings guidance for 2025 and also announced a $1 billion share repurchase program. Alaska Air completed its acquisition of Hawaiian Holdings in September.
 
 
-While the big leaders in the group like Alaska Air and **United Airlines** ([UAL](https://research.investors.com/quote.aspx?symbol=UAL)) are extended past proper entry points, two other strong performers are near new entries. **SkyWest** ([SKYW](https://research.investors.com/quote.aspx?symbol=SKYW)) is testing support at its [10-week moving average](https://www.investors.com/how-to-invest/investors-corner/top-stocks-tend-to-do-this-after-technical-breakout/) for the first time after a breakout from a cup base in October. **Delta Air Lines** ([DAL](https://research.investors.com/quote.aspx?symbol=DAL)), meanwhile, is trading tightly near highs after a breakout during the week ended Oct. 18.  
-虽然阿拉斯加航空和美国**联合航空** （[UAL](https://research.investors.com/quote.aspx?symbol=UAL)） 等集团中的巨头已经超过了适当的入场点，但另外两家表现强劲的公司接近新进入者。**SkyWest** （[SKYW](https://research.investors.com/quote.aspx?symbol=SKYW)） 在 10 月份突破杯底后，首次测试其 [10 周移动平均线](https://www.investors.com/how-to-invest/investors-corner/top-stocks-tend-to-do-this-after-technical-breakout/)的支撑位。与此同时，**达美航空** （[DAL](https://research.investors.com/quote.aspx?symbol=DAL)） 在截至 10 月 18 日当周突破后，交易价格紧随高点附近。
+While the big leaders in the group like Alaska Air and **United Airlines** ([UAL](https://research.investors.com/quote.aspx?symbol=UAL)) are extended past proper entry points, two other strong performers are near new entries. **SkyWest** ([SKYW](https://research.investors.com/quote.aspx?symbol=SKYW)) is testing support at its [10-week moving average](https://www.investors.com/how-to-invest/investors-corner/top-stocks-tend-to-do-this-after-technical-breakout/) for the first time after a breakout from a cup base in October. **Delta Air Lines** ([DAL](https://research.investors.com/quote.aspx?symbol=DAL)), meanwhile, is trading tightly near highs after a breakout during the week ended Oct. 18.
 
 
 
@@ -80,8 +67,7 @@ While the big leaders in the group like Alaska Air and **United Airlines** ([UAL
 ---
 
 
-[**How To Know When It's Time To Sell Your Favorite Stock  
-如何知道何时该出售您最喜欢的股票**](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/)
+[**How To Know When It's Time To Sell Your Favorite Stock**](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/)
 
 
 
@@ -89,63 +75,50 @@ While the big leaders in the group like Alaska Air and **United Airlines** ([UAL
 ---
 
 
-Semiconductor stocks lagged again. The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) fell 2.5% and closed just above its 200-day moving average. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) suffered a bearish outside day and closed more than 2% below its 50-day line, falling 2.7% in light turnover. Group peer **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) slumped 4% in higher volume and also closed below its 50-day line with earnings due Thursday after the close.  
-半导体股再次落后。VanEck Semiconductor ETF （[SMH](https://research.investors.com/quote.aspx?symbol=SMH)） 下跌 2.5%，收于略高于其 200 天移动平均线。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 在外盘看跌，收盘价低于 2 日线 50% 以上，轻度成交量下跌 2.7%。集团同行**博通** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 在成交量增加的情况下下跌 4%，也收于其 50 日线下方，周四收盘后将公布财报。
+Semiconductor stocks lagged again. The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) fell 2.5% and closed just above its 200-day moving average. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) suffered a bearish outside day and closed more than 2% below its 50-day line, falling 2.7% in light turnover. Group peer **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) slumped 4% in higher volume and also closed below its 50-day line with earnings due Thursday after the close.
 
 
-Chip foundry **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) reported a 34% increase in November sales, but investors still sent shares lower by more than 3%. TSMC closed just above its 50-day line.  
-芯片代工**台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)） 报告称，11 月销售额增长 34%，但投资者仍推动股价下跌超过 3%。台积电收于略高于其 50 日线。
+Chip foundry **Taiwan Semiconductor Manufacturing** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) reported a 34% increase in November sales, but investors still sent shares lower by more than 3%. TSMC closed just above its 50-day line.
 
 
-Waystar And Insulet Jump Waystar 和 Insulet Jump
------------------------------------------------
+Waystar And Insulet Jump
+------------------------
 
 
-Software firm **Waystar** ([WAY](https://research.investors.com/quote.aspx?symbol=WAY)), which specializes in health care payments, was a notable gainer in the [MarketSurge Growth 250](https://marketsurge.investors.com), up 4.5%. The weekly chart has the look of a flat base, but Waystar has been consolidating for only a little over four weeks. Still, Waystar came to within five cents of its 52-week high of 33.25.  
-专门从事医疗保健支付的软件公司 **Waystar** （[WAY](https://research.investors.com/quote.aspx?symbol=WAY)） 在 [MarketSurge Growth 250](https://marketsurge.investors.com) 中上涨 4.5%，显着上涨。周线图看起来是平底的，但 Waystar 只盘整了四个多星期。尽管如此，Waystar 仍跌至其 52 周高点 33.25 的 5 美分以内。
+Software firm **Waystar** ([WAY](https://research.investors.com/quote.aspx?symbol=WAY)), which specializes in health care payments, was a notable gainer in the [MarketSurge Growth 250](https://marketsurge.investors.com), up 4.5%. The weekly chart has the look of a flat base, but Waystar has been consolidating for only a little over four weeks. Still, Waystar came to within five cents of its 52-week high of 33.25.
 
 
-**Insulet** ([PODD](https://research.investors.com/quote.aspx?symbol=PODD)) also moved well in the medical products group. The maker of insulin delivery systems jumped nearly 4% in higher volume, clearing a short [trendline](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trend-lines-and-find-lower-buy-points-in-stock-charts/). Insulet's weekly chart has the look of a flat base but it's a little short. Still, it's in position for a breakout try over its 52-week high of 279.40.  
-**Insulet** （[PODD）](https://research.investors.com/quote.aspx?symbol=PODD) 在医疗产品组中也表现良好。这家胰岛素输送系统制造商的销量上涨近 4%，扫清了一条短[趋势线](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trend-lines-and-find-lower-buy-points-in-stock-charts/)。Insulet 的周线图看起来是平底的，但有点短。尽管如此，它仍有可能突破 52 周高点 279.40。
+**Insulet** ([PODD](https://research.investors.com/quote.aspx?symbol=PODD)) also moved well in the medical products group. The maker of insulin delivery systems jumped nearly 4% in higher volume, clearing a short [trendline](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trend-lines-and-find-lower-buy-points-in-stock-charts/). Insulet's weekly chart has the look of a flat base but it's a little short. Still, it's in position for a breakout try over its 52-week high of 279.40.
 
 
-The real challenge for investors now is navigating an environment where extended stocks are the rule, not the exception. If you've taken some gains in some big winners and put fresh money to work, how are the new buys doing? Have they made meaningful progress? Or are they treading water or even below your entry?  
-投资者现在面临的真正挑战是驾驭一个扩大股票是常态而不是例外的环境。如果您在一些大赢家中获得了一些收益，并将新资金投入使用，那么新买家的表现如何？他们是否取得了有意义的进展？或者他们是否踩水，甚至低于您的入口？
+The real challenge for investors now is navigating an environment where extended stocks are the rule, not the exception. If you've taken some gains in some big winners and put fresh money to work, how are the new buys doing? Have they made meaningful progress? Or are they treading water or even below your entry?
 
 
-If a new buy doesn't go as planned, don't be afraid to keep losses small. And if repeated new buys aren't making headway, listen to the market's message and take your foot off the accelerator.  
-如果新的买入没有按计划进行，请不要害怕保持较小的损失。如果重复的新购买没有取得进展，请倾听市场的信息，并停止油门。
+If a new buy doesn't go as planned, don't be afraid to keep losses small. And if repeated new buys aren't making headway, listen to the market's message and take your foot off the accelerator.
 
 
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121024.pdf)
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121024.pdf)
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
-*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:**
 
 
-[Top Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Futures: Two Titans Jump But Growth Skids Again  
-期货：两只巨人跳跃，但增长再次下滑](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-google-tesla-strong-palantir-nvidia-fall-cpi-inflation-due/)
+[Futures: Two Titans Jump But Growth Skids Again](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-google-tesla-strong-palantir-nvidia-fall-cpi-inflation-due/)
 
 
 
