--- a/_columns/Swing_Trading/zh-cn/2024-12-06.md
+++ b/_columns/Swing_Trading/zh-cn/2024-12-06.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Pullback After Earnings Gave Us Another Chance At Dutch Bros Stock	财报后的回调给了我们另一个机会 Dutch Bros 股票
+  Pullback After Earnings Gave Us Another Chance At Dutch Bros Stock
 date: 2024-12-06 15:53 -0800
 image: /assets/img/swing-trading/2024-12-06.jpg
 author: JUSTIN NIELSEN
@@ -11,35 +11,22 @@ author: JUSTIN NIELSEN
 
 
 
-This earnings season has seen plenty of stocks launch 20% or more higher. With upside moves like that, even normal pullbacks will easily shake you out if you buy on the gap. Setting a reasonable stop loss can be difficult. But often, stocks like **Dutch Bros** ([BROS](https://research.investors.com/quote.aspx?symbol=BROS)) will give you a second chance with a lower risk entry.  
-这个财报季，许多股票的股价上涨了 20% 或更多。在这样的上行走势下，如果您在缺口买入，即使是正常的回调也很容易让您感到震惊。设置合理的止损可能很困难。但通常情况下，像 **Dutch Bros** （[BROS](https://research.investors.com/quote.aspx?symbol=BROS)） 这样的股票会给你第二次机会，风险更低。
+This earnings season has seen plenty of stocks launch 20% or more higher. With upside moves like that, even normal pullbacks will easily shake you out if you buy on the gap. Setting a reasonable stop loss can be difficult. But often, stocks like **Dutch Bros** ([BROS](https://research.investors.com/quote.aspx?symbol=BROS)) will give you a second chance with a lower risk entry.
 
 
 
 
-Swing Trading Example: Dutch Bros Stock波段交易示例：Dutch Bros 股票
------------------------------------------------------------
+Swing Trading Example: Dutch Bros Stock
+---------------------------------------
 
 
-As the election unfolded and stocks got their postelection bumps, not everything was easy to buy. Dutch Bros was up nearly 4% the day after the election **(1)** but difficult to buy with earnings on tap. When earnings did come out, Dutch Bros was up 43% at its peak before settling at a 28% gain **(2)**. A purchase at the open would have fared OK but a purchase at the peak of the day saw over a 10% loss at the close. That can be hard to stomach having a stock gain that much and still be a loser.  
-随着选举的展开和股市在选举后出现波动，并非所有东西都很容易买到。Dutch Bros 在大选后的第二天上涨了近 **4% （1），**但由于收益充足，很难购买。当财报公布时，Dutch Bros 在高峰期上涨了 43%，然后以 28% 的涨幅收盘 **（2）。**开盘时买入本来可以，但在当天的高峰期买入，收盘时损失超过 10%。这可能很难忍受股票上涨这么多并且仍然是一个输家。
+As the election unfolded and stocks got their postelection bumps, not everything was easy to buy. Dutch Bros was up nearly 4% the day after the election **(1)** but difficult to buy with earnings on tap. When earnings did come out, Dutch Bros was up 43% at its peak before settling at a 28% gain **(2)**. A purchase at the open would have fared OK but a purchase at the peak of the day saw over a 10% loss at the close. That can be hard to stomach having a stock gain that much and still be a loser.
 
 
-But if you're patient, you can get a second chance. Bros ended up testing its lows the next day, moving toward its highs over the next few days and then doing one final pullback. The day of interest came when Bros was down three consecutive days but the last day closed high in the range **(3)** and down less than the prior two days. That's a sign of supporting action when you see an upside reversal like that.  
-但如果你有耐心，你可以得到第二次机会。Bros 最终在第二天测试了它的低点，在接下来的几天里向它的高点移动，然后进行了最后一次回调。当 Bros 连续三天下跌，但最后一天收盘于 **（3）** 区间高点且跌幅低于前两天时，出现了利息的一天。当你看到这样的上行反转时，这是一个支持行动的迹象。
+But if you're patient, you can get a second chance. Bros ended up testing its lows the next day, moving toward its highs over the next few days and then doing one final pullback. The day of interest came when Bros was down three consecutive days but the last day closed high in the range **(3)** and down less than the prior two days. That's a sign of supporting action when you see an upside reversal like that.
 
 
-Once Dutch Bros started moving the next day, we added it to [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(4)**.  
-当 Dutch Bros 第二天开始移动时，我们将其添加到 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)**（4）** 中。
-
-
-
-
----
-
-
-[**Joe Fahmy Covers How To Improve Your Trading Decisions For Bigger Profits  
-Joe Fahmy 介绍了如何改进您的交易决策以获得更大的利润**](https://www.investors.com/ibd-videos/videos/two-common-mistakes-investors-make-ahead-news-events)
+Once Dutch Bros started moving the next day, we added it to [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(4)**.
 
 
 
@@ -47,55 +34,52 @@ Joe Fahmy 介绍了如何改进您的交易决策以获得更大的利润**](htt
 ---
 
 
-Our entry was just above 48, a price that it hit initially on its earnings gap up. But the pullback now gives us a better way of managing our risk. Instead of using the low of the gap up day **(2)**, more than 10% below our entry price, we can use the upside reversal low **(3)** and cut our risk in half.  
-我们的入场价略高于 48，这是它最初因盈利缺口而打击的价格。但现在回调为我们提供了一种更好的风险管理方式。我们可以利用向上反转低点 **（3），**而不是使用比我们的入场价低 10% 以上的向上跳空交易日 **（2）** 的低点，将我们的风险降低一半。
+[**Joe Fahmy Covers How To Improve Your Trading Decisions For Bigger Profits**](https://www.investors.com/ibd-videos/videos/two-common-mistakes-investors-make-ahead-news-events)
 
 
-Another Pullback Gets An Add另一个回调得到一个 Add
------------------------------------------
 
 
-Just a few days later, on Nov. 20, we already had nearly a 10% gain on our entry **(5)**. Given that we were still early in a market turn, rather than take the profit, we decided to hold for longer. But we didn't want to give up all the gains. So we raised the stop to just below 50, the Nov. 20 low.  
-仅仅几天后，即 11 月 20 日，我们的入场券 **（5）** 已经上涨了近 10%。鉴于我们仍处于市场转向的早期阶段，我们决定持有更长时间，而不是获利了结。但我们不想放弃所有收益。因此，我们将止损提高到略低于 50，即 11 月 20 日的低点。
+---
 
 
-After a mild pullback we added to the position as the stock powered higher **(6)**. Here we could use the low of the pullback as our stop loss for the added position.  
-在小幅回调后，随着股票走高 **（6），**我们增加了该头寸。在这里，我们可以使用回调的低点作为增加仓位的止损。
+Our entry was just above 48, a price that it hit initially on its earnings gap up. But the pullback now gives us a better way of managing our risk. Instead of using the low of the gap up day **(2)**, more than 10% below our entry price, we can use the upside reversal low **(3)** and cut our risk in half.
 
 
-Just as we scaled into the position, you can scale out as well. When we saw a gap-up close near its lows **(7)**, we took the opportunity to lock in some gains. Over the next couple of days, Dutch Bros kept challenging the support at the recent gap-up low and we eventually sold the remaining position **(8)**. It was another case where the stock wasn't doing anything particularly wrong. But with the market having moved so far so quickly, we took the opportunity to lock in some gains. Especially on stocks that looked like they could use a pause.  
-正如我们缩减到该位置一样，您也可以横向扩展。当我们看到一个向上跳空收于其低点附近 **（7）** 时，我们借此机会锁定了一些收益。在接下来的几天里，Dutch Bros 不断挑战近期跳空低点的支撑位，我们最终卖出了剩余的头寸 **（8）。**这是股票没有做任何特别错误的另一个例子。但由于市场波动如此之快，我们借此机会锁定了一些收益。尤其是那些看起来可以暂停的股票。
+Another Pullback Gets An Add
+----------------------------
 
 
-Earnings gaps are often too difficult to set reasonable stops on the day they occur. But if you're patient, you can often minimize your risk with a mild pullback.  
-收益差距通常太难了，无法在出现当天设置合理的止损。但如果你有耐心，你通常可以通过轻微的回调来最大限度地降低风险。
+Just a few days later, on Nov. 20, we already had nearly a 10% gain on our entry **(5)**. Given that we were still early in a market turn, rather than take the profit, we decided to hold for longer. But we didn't want to give up all the gains. So we raised the stop to just below 50, the Nov. 20 low.
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
-SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+After a mild pullback we added to the position as the stock powered higher **(6)**. Here we could use the low of the pullback as our stop loss for the added position.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+Just as we scaled into the position, you can scale out as well. When we saw a gap-up close near its lows **(7)**, we took the opportunity to lock in some gains. Over the next couple of days, Dutch Bros kept challenging the support at the recent gap-up low and we eventually sold the remaining position **(8)**. It was another case where the stock wasn't doing anything particularly wrong. But with the market having moved so far so quickly, we took the opportunity to lock in some gains. Especially on stocks that looked like they could use a pause.
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
-想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+Earnings gaps are often too difficult to set reasonable stops on the day they occur. But if you're patient, you can often minimize your risk with a mild pullback.
 
 
-[Stocks Going Rangebound? Here's An Option Strategy To Use.  
-股市区间震荡？这是一个可以使用的选项策略。](https://www.investors.com/ibd-videos/videos/come-prepared-for-sector-rotations-with-iron-condors-call-walls-and-more)
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).*
 
 
-[How to Smooth Your Equity Curve And Reduce Drawdowns  
-如何平滑您的净值曲线并减少回撤](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
+**YOU MAY ALSO LIKE:**
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops  
-弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts  
-跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
+[Stocks Going Rangebound? Here's An Option Strategy To Use.](https://www.investors.com/ibd-videos/videos/come-prepared-for-sector-rotations-with-iron-condors-call-walls-and-more)
+
+
+[How to Smooth Your Equity Curve And Reduce Drawdowns](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
+
+
+[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+
+
+[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/)
 
 
 
