--- a/_columns/The_Big_Picture/zh-cn/2024-12-09.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-09.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Cools Off In Higher Volume As AppLovin Posts A Sell Signal. Here's Why A Pullback Is Highly Probable.	随着 AppLovin 发布卖出信号，股市以更高的成交量降温。这就是为什么回调的可能性很高。
+  Stock Market Cools Off In Higher Volume As AppLovin Posts A Sell Signal. Here's Why A Pullback Is Highly Probable.
 date: 2024-12-09 18:05 -0800
 author: DAVID SAITO-CHUNG
 ---
@@ -10,38 +10,31 @@ author: DAVID SAITO-CHUNG
 
 
 
-Put that "Nasdaq 20,000" hat in the drawer for now. The stock market decided on Monday that taking profits was on order for the day.  
-现在把那顶“纳斯达克 20,000”的帽子放在抽屉里。股市周一决定，当天获利了结。
+Put that "Nasdaq 20,000" hat in the drawer for now. The stock market decided on Monday that taking profits was on order for the day.
 
 
-The Nasdaq headed into Monday's action with three straight weekly gains on its belt. On Monday morning, it eked out an all-time high of 19,872 before reversing. Thus, a 0.6% decline likely produced little surprise to most investors. It also seems reasonable in the context of the Nasdaq composite's gains of 1.7%, 1.1% and 3.3% in the prior three weeks.  
-纳斯达克指数周一连续三周上涨。周一早上，它勉强创下 19,872 点的历史高点，然后反转。因此，0.6% 的下跌可能不会让大多数投资者感到意外。鉴于纳斯达克综合指数在过去三周分别上涨了 1.7%、1.1% 和 3.3%，这似乎也很合理。
+The Nasdaq headed into Monday's action with three straight weekly gains on its belt. On Monday morning, it eked out an all-time high of 19,872 before reversing. Thus, a 0.6% decline likely produced little surprise to most investors. It also seems reasonable in the context of the Nasdaq composite's gains of 1.7%, 1.1% and 3.3% in the prior three weeks.
 
 
 
 
-The Nasdaq started 2024 at 15,011. At Monday's peak, it's gained an impressive 32% year to date.  
-纳斯达克指数在 2024 年初为 15,011 点。在周一的峰值，它今年迄今已上涨了 32%，令人印象深刻。
+The Nasdaq started 2024 at 15,011. At Monday's peak, it's gained an impressive 32% year to date.
 
 
-The S&P 500, which also had romped higher three weeks in a row, also gave back 0.6% on Monday. The large-cap benchmark had rallied 3.7% during the prior three-week run. The Russell 2000 surrendered 0.7%, while the Dow Jones Industrial Average eased 0.5%.  
-标准普尔 500 指数也连续三周走高，周一也回吐了 0.6%。大盘股基准指数在之前的三周上涨了 3.7%。罗素 2000 指数下跌 0.7%，而道琼斯工业平均指数下跌 0.5%。
+The S&P 500, which also had romped higher three weeks in a row, also gave back 0.6% on Monday. The large-cap benchmark had rallied 3.7% during the prior three-week run. The Russell 2000 surrendered 0.7%, while the Dow Jones Industrial Average eased 0.5%.
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-For now, it's fair to say the profit-taking looks normal. Watch to see if the Nasdaq posts an inside week. That is, do this week's high and low fall inside the high and low of the prior week? If yes, such stock market action would hint that the selling is controlled.  
-目前，可以公平地说，获利回吐看起来很正常。关注纳斯达克指数是否公布内周消息。也就是说，本周的高点和低点是否在前一周的高点和低点之间？如果是，这种股票市场行为将暗示抛售受到控制。
+For now, it's fair to say the profit-taking looks normal. Watch to see if the Nasdaq posts an inside week. That is, do this week's high and low fall inside the high and low of the prior week? If yes, such stock market action would hint that the selling is controlled.
 
 
-Volume grew significantly vs. Friday's session on both main exchanges. Thus, both the Nasdaq and S&P 500 chalked up a [fresh distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/).  
-与周五的交易时段相比，两个主要交易所的成交量都大幅增长。因此，纳斯达克和标准普尔 500 指数都迎来[了新的发行日](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/)。
+Volume grew significantly vs. Friday's session on both main exchanges. Thus, both the Nasdaq and S&P 500 chalked up a [fresh distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/).
 
 
-As seen in the Market Pulse table, three distribution days do not pose as an unusually heavy amount of professional selling.  
-从 Market Pulse 表中可以看出，三个配送日并不意味着专业销售量异常大。
+As seen in the Market Pulse table, three distribution days do not pose as an unusually heavy amount of professional selling.
 
 
 
@@ -49,8 +42,7 @@ As seen in the Market Pulse table, three distribution days do not pose as an unu
 ---
 
 
-[**Microsoft Stock Surpasses An Early Entry; Why It's A Buy Now  
-Microsoft 股票超过提前入场;为什么是立即购买**](https://www.investors.com/research/microsoft-msft-stock-buy-now/)
+[**Microsoft Stock Surpasses An Early Entry; Why It's A Buy Now**](https://www.investors.com/research/microsoft-msft-stock-buy-now/)
 
 
 
@@ -61,45 +53,36 @@ Microsoft 股票超过提前入场;为什么是立即购买**](https://www.inves
 ![](https://www.investors.com/wp-content/uploads/2024/12/MP120924-228x300.jpg)
 
 
-The Nov. 15 distribution on the S&P 500, a 1.3% slide, would disappear on the count after 25 trading days pass. The Nov. 25 stalling day is rare. IBD research has found that stalling days by themselves do not lead to major market tops. Instead, heavy distribution offers a stronger signal that the stock market has peaked.  
-标准普尔 500 指数 11 月 15 日的分布下跌了 1.3%，将在 25 个交易日过去后消失。11 月 25 日的停滞日很少见。IBD 研究发现，停滞天数本身并不会导致主要的市场顶部。相反，大量派发提供了更强的信号，表明股市已经见顶。
+The Nov. 15 distribution on the S&P 500, a 1.3% slide, would disappear on the count after 25 trading days pass. The Nov. 25 stalling day is rare. IBD research has found that stalling days by themselves do not lead to major market tops. Instead, heavy distribution offers a stronger signal that the stock market has peaked.
 
 
-That said, Monday's stock market moves also underlined the importance of buying with discipline. Some stocks, such as **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)), have seen their recent rallies nearly go vertical. Such moves are unsustainable.  
-也就是说，周一的股市走势也凸显了有纪律地购买的重要性。一些股票，如 **AppLovin** （[APP](https://research.investors.com/quote.aspx?symbol=APP)），最近的反弹几乎是垂直的。这样的举动是不可持续的。
+That said, Monday's stock market moves also underlined the importance of buying with discipline. Some stocks, such as **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)), have seen their recent rallies nearly go vertical. Such moves are unsustainable.
 
 
-AppLovin became ripe for profit-taking after crossing 400 for the first time. At Friday's peak, the app development platform reached a breathtaking stock market valuation of $140 billion. For perspective, if AppLovin held a place in the Dow Jones Industrial Average, it would be the 24th largest member in terms of market capitalization.  
-AppLovin 在首次突破 400 点后获利回吐的时机成熟。在周五的高峰期，该应用程序开发平台的股票市场估值达到了惊人的 1400 亿美元。从长远来看，如果 AppLovin 在道琼斯工业平均指数中占有一席之地，它将成为市值第 24 位最大的成员。
+AppLovin became ripe for profit-taking after crossing 400 for the first time. At Friday's peak, the app development platform reached a breathtaking stock market valuation of $140 billion. For perspective, if AppLovin held a place in the Dow Jones Industrial Average, it would be the 24th largest member in terms of market capitalization.
 
 
-From 100 To 400 In Three Months三个月内从 100 增加到 400
-------------------------------------------------
+From 100 To 400 In Three Months
+-------------------------------
 
 
-AppLovin fell 58 points on Monday, the most in a single session since the Sept. 11 breakout. Volume nearly tripled usual levels. After a strong run-up, this sell-off also serves as a timely signal to take at least some profits. AppLovin remains 51% above its rising 50-day moving average.  
-AppLovin 周一下跌 58 点，为 9 月 11 日爆发以来的最大单日跌幅。成交量几乎是平时水平的三倍。在强劲上涨之后，这次抛售也是至少获得一些利润的及时信号。AppLovin 仍比其不断上升的 50 天移动平均线高出 51%。
+AppLovin fell 58 points on Monday, the most in a single session since the Sept. 11 breakout. Volume nearly tripled usual levels. After a strong run-up, this sell-off also serves as a timely signal to take at least some profits. AppLovin remains 51% above its rising 50-day moving average.
 
 
 
-Other stock market leaders taking it on the chin hard? Bitcoin-related firms sold off, including **Coinbase** ([COIN](https://research.investors.com/quote.aspx?symbol=COIN)), **Hut 8** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) and **Mara** ([MARA](https://research.investors.com/quote.aspx?symbol=MARA)). All three reside in the IBD 50. All but two names in the IBD 50 fell, as the index tumbled 3.8%.  
-其他股市领导者对此表示不满？比特币相关公司纷纷抛售，包括 **Coinbase** （[COIN](https://research.investors.com/quote.aspx?symbol=COIN)）、**Hut 8** （[HUT](https://research.investors.com/quote.aspx?symbol=HUT)） 和 **Mara** （[MARA](https://research.investors.com/quote.aspx?symbol=MARA)）。这三个都存在于 IBD 50 中。IBD 50 中除两只股票外，其他股票均下跌，指数下跌 3.8%。
+Other stock market leaders taking it on the chin hard? Bitcoin-related firms sold off, including **Coinbase** ([COIN](https://research.investors.com/quote.aspx?symbol=COIN)), **Hut 8** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) and **Mara** ([MARA](https://research.investors.com/quote.aspx?symbol=MARA)). All three reside in the IBD 50. All but two names in the IBD 50 fell, as the index tumbled 3.8%.
 
 
-Hut has done very well since it cleared a six-day handle on its very deep cup pattern at 18.39. Daily swings have gotten wilder, and yet the operator of industrial-scale bitcoin mining operations has not yet even pierced its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) since the Nov. 6 breakout.  
-Hut 自从 18.39 的超深杯型清除了六天的关口以来，表现非常出色。每日波动变得更加剧烈，但自 11 月 6 日突破以来，这家工业规模比特币挖矿业务的运营商甚至尚未突破其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。
+Hut has done very well since it cleared a six-day handle on its very deep cup pattern at 18.39. Daily swings have gotten wilder, and yet the operator of industrial-scale bitcoin mining operations has not yet even pierced its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) since the Nov. 6 breakout.
 
 
-One of the day's best performing assets was crude oil. West Texas Intermediate futures rose more than 1.4% to $68.19 a barrel. However, within the stock market, oil stocks are not showing up as a bastion of leadership.  
-当天表现最好的资产之一是原油。西德克萨斯中质原油期货上涨超过 1.4% 至每桶 68.19 美元。然而，在股市中，石油股并没有成为领导地位的堡垒。
+One of the day's best performing assets was crude oil. West Texas Intermediate futures rose more than 1.4% to $68.19 a barrel. However, within the stock market, oil stocks are not showing up as a bastion of leadership.
 
 
-Looking at IBD's daily ranking of 197 industry groups, just one oil-industry-related group ranks in the top 40 in terms of six-month price leadership. Oil and gas royalty trust stocks currently ranks No. 1. But the fact that none of its peer groups are doing as well makes this group's move an anomaly for now.  
-从 IBD 对 197 个行业集团的每日排名来看，只有一个石油行业相关集团在六个月的价格领先方面排名前 40。石油和天然气特许权使用费信托股票目前排名第一。但事实上，没有一个同行集团的表现如此出色，这使得该集团的举动目前是一个反常现象。
+Looking at IBD's daily ranking of 197 industry groups, just one oil-industry-related group ranks in the top 40 in terms of six-month price leadership. Oil and gas royalty trust stocks currently ranks No. 1. But the fact that none of its peer groups are doing as well makes this group's move an anomaly for now.
 
 
-Oil and gas transport and pipeline ranked 69th, down from 56 three months ago, followed by oil machinery (71) and U.S. exploration and production (86). [See the full rankings at IBD Data Tables](https://www.investors.com/ibd-data-tables/).  
-石油和天然气运输和管道排名第 69 位，低于三个月前的第 56 位，其次是石油机械（第 71 位）和美国勘探和生产（第 86 位）。[在 IBD 数据表上查看完整排名](https://www.investors.com/ibd-data-tables/)。
+Oil and gas transport and pipeline ranked 69th, down from 56 three months ago, followed by oil machinery (71) and U.S. exploration and production (86). [See the full rankings at IBD Data Tables](https://www.investors.com/ibd-data-tables/).
 
 
 
@@ -107,8 +90,7 @@ Oil and gas transport and pipeline ranked 69th, down from 56 three months ago, f
 ---
 
 
-[**What Is Relative Strength?  
-什么是相对强度？**](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)
+[**What Is Relative Strength?**](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)
 
 
 
@@ -116,71 +98,57 @@ Oil and gas transport and pipeline ranked 69th, down from 56 three months ago, f
 ---
 
 
-Value Stocks Still Lagging Growth价值股仍落后于增长
-------------------------------------------
+Value Stocks Still Lagging Growth
+---------------------------------
 
 
-Strong gains by Chinese equities trading in the U.S. stock market indicated that some investors are eager to see the world's No. 2 economy follow through on promises to boost growth. Yet a question for most U.S. investors is will we see more rotation within the domestic stock market itself? One way to check: Look at growth and value-oriented exchange traded funds.  
-中国股市在美国股市的强劲上涨表明，一些投资者渴望看到世界第二大经济体兑现促进增长的承诺。然而，大多数美国投资者面临的一个问题是，我们是否会在国内股市本身看到更多的轮动？一种检查方法：查看增长型和价值导向型交易所交易基金。
+Strong gains by Chinese equities trading in the U.S. stock market indicated that some investors are eager to see the world's No. 2 economy follow through on promises to boost growth. Yet a question for most U.S. investors is will we see more rotation within the domestic stock market itself? One way to check: Look at growth and value-oriented exchange traded funds.
 
 
-The iShares Russell 1000 Value ([IWD](https://research.investors.com/quote.aspx?symbol=IWD)) slumped 0.6% on Monday and notched its sixth loss in a row. Its gain of 2.6% since the start of the fourth quarter pales in comparison to a 9.2% advance by iShares Russell 1000 Growth ([IWF](https://research.investors.com/quote.aspx?symbol=IWF)), which declined nearly 0.7% Monday.  
-iShares 罗素 1000 价值指数 （[IWD](https://research.investors.com/quote.aspx?symbol=IWD)） 周一下跌 0.6%，连续第六次下跌。自第四季度初以来，其 2.6% 的涨幅与 iShares Russell 1000 Growth （[IWF）](https://research.investors.com/quote.aspx?symbol=IWF) 周一下跌近 0.7% 的 9.2% 相比相形见绌。
+The iShares Russell 1000 Value ([IWD](https://research.investors.com/quote.aspx?symbol=IWD)) slumped 0.6% on Monday and notched its sixth loss in a row. Its gain of 2.6% since the start of the fourth quarter pales in comparison to a 9.2% advance by iShares Russell 1000 Growth ([IWF](https://research.investors.com/quote.aspx?symbol=IWF)), which declined nearly 0.7% Monday.
 
 
-Vanguard Value ([VTV](https://research.investors.com/quote.aspx?symbol=VTV)), which seeks value-type stocks within the large-cap universe, posted its own sixth straight loss and has a measly gain of 1.5% since Oct 1. The ETF looks poised for a test of support at the rising 50-day moving average.  
-在大盘股领域寻找价值型股票的 Vanguard Value （[VTV](https://research.investors.com/quote.aspx?symbol=VTV)） 连续第六次下跌，自 10 月 1 日以来仅上涨了 1.5%。该 ETF 似乎已准备好在上升的 50 天移动平均线处测试支撑位。
+Vanguard Value ([VTV](https://research.investors.com/quote.aspx?symbol=VTV)), which seeks value-type stocks within the large-cap universe, posted its own sixth straight loss and has a measly gain of 1.5% since Oct 1. The ETF looks poised for a test of support at the rising 50-day moving average.
 
 
-Too Much Stock Market Optimism?股市过于乐观？
---------------------------------------
+Too Much Stock Market Optimism?
+-------------------------------
 
 
-In the short term, a pullback may be nigh. Why? Optimism among stock market pundits has reached levels that have coincided with pullbacks and meaningful corrections. The thinking here is: When the crowd is extremely excited about stocks, who is left to buy?  
-短期内，回调可能即将到来。为什么？股市专家的乐观情绪已经达到了与回调和有意义的修正相吻合的水平。这里的想法是：当人群对股票极度兴奋时，谁还能买呢？
+In the short term, a pullback may be nigh. Why? Optimism among stock market pundits has reached levels that have coincided with pullbacks and meaningful corrections. The thinking here is: When the crowd is extremely excited about stocks, who is left to buy?
 
 
-[Bullishness among newsletter writers tracked weekly by Investors Intelligence](https://research.investors.com/psychological-market-indicators/chart?type=bullsbears) ramped up to 62.9% as of last week. That's the highest level of stock market optimism since a 64.2% reading in the week ended July 26. In August, typically a time when equities cool off, the Nasdaq finished almost 0.7% higher for the month. But it had fallen as much as 10.7% that month as well.  
-截至上周，[Investors Intelligence 每周跟踪的时事通讯作者的看涨情绪](https://research.investors.com/psychological-market-indicators/chart?type=bullsbears)上升至 62.9%。这是自截至 7 月 26 日当周 64.2% 的读数以来股市乐观情绪的最高水平。8 月通常是股市降温的时候，纳斯达克指数当月收盘上涨近 0.7%。但那个月它也下跌了 10.7%。
+[Bullishness among newsletter writers tracked weekly by Investors Intelligence](https://research.investors.com/psychological-market-indicators/chart?type=bullsbears) ramped up to 62.9% as of last week. That's the highest level of stock market optimism since a 64.2% reading in the week ended July 26. In August, typically a time when equities cool off, the Nasdaq finished almost 0.7% higher for the month. But it had fallen as much as 10.7% that month as well.
 
 
-[A monthly chart on MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*j0c4ek*_gcl_au*MTQzMjEwMTg0OS4xNzMxMjU3MzY0*_ga*MTA4MzY4MTI4NC4xNzMzNjg0MTAy*_ga_K2H7B9JRSS*MTczMzY4NDEwMS4xLjEuMTczMzY4NDExOS40Mi4wLjA.) shows just how volatile that month proved.  
-[MarketSurge 上的月度图表](https://marketsurge.investors.com/?src=A012BF&_gl=1*j0c4ek*_gcl_au*MTQzMjEwMTg0OS4xNzMxMjU3MzY0*_ga*MTA4MzY4MTI4NC4xNzMzNjg0MTAy*_ga_K2H7B9JRSS*MTczMzY4NDEwMS4xLjEuMTczMzY4NDExOS40Mi4wLjA.)显示了该月的波动性。
+[A monthly chart on MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*j0c4ek*_gcl_au*MTQzMjEwMTg0OS4xNzMxMjU3MzY0*_ga*MTA4MzY4MTI4NC4xNzMzNjg0MTAy*_ga_K2H7B9JRSS*MTczMzY4NDEwMS4xLjEuMTczMzY4NDExOS40Mi4wLjA.) shows just how volatile that month proved.
 
 
-The S&P 500 rallied 2.3% in August. But it was a wild month as investors worried about both inflation and weak July nonfarm payrolls at the time.  
-标准普尔 500 指数在 8 月份上涨了 2.3%。但这是一个疯狂的月份，因为投资者当时担心通胀和 7 月非农就业人数疲软。
+The S&P 500 rallied 2.3% in August. But it was a wild month as investors worried about both inflation and weak July nonfarm payrolls at the time.
 
 
-(See more views on investor sentiment by clicking on [IBD's market psychological indicators](https://research.investors.com/psychological-market-indicators/) page.)  
-（点击[IBD的市场心理指标](https://research.investors.com/psychological-market-indicators/)页面，查看更多投资者情绪观点。
+(See more views on investor sentiment by clicking on [IBD's market psychological indicators](https://research.investors.com/psychological-market-indicators/) page.)
 
 
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120924.pdf)
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120924.pdf)
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
-*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+**YOU MIGHT ALSO LIKE:**
 
 
-[The Latest In IBD Videos  
-最新的 IBD 视频](https://www.investors.com/ibd-videos)
+[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
 
 
-[IBD 50 Stocks To Watch  
-值得关注的 IBD 50 只股票](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
+[IBD 50 Stocks To Watch](https://www.investors.com/research/ibd-50-growth-stocks-to-watch/)
 
 
-[This Is Still The Golden Rule Of Investing  
-这仍然是投资的黄金法则](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)
+[This Is Still The Golden Rule Of Investing](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings  
-获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
 
